@@ -192,8 +192,8 @@ class RecalculatingLossWinTest {
                     () -> assertTrue(actualPayload.getWageredDepositInfo().isEmpty(), "nats.payload.wagered_deposit_info")
             );
 
-            var expectedBetInfo = expectedBetInfoList.getFirst();
-            var actualBetInfo = actualPayload.getBetInfo().getFirst();
+            var expectedBetInfo = expectedBetInfoList.get(0);
+            var actualBetInfo = actualPayload.getBetInfo().get(0);
             assertAll("Проверка полей внутри bet_info NATS payload",
                     () -> assertEquals(expectedBetInfo.getChampId(), actualBetInfo.getChampId(), "nats.payload.bet_info.champId"),
                     () -> assertEquals(expectedBetInfo.getChampName(), actualBetInfo.getChampName(), "nats.payload.bet_info.champ_name"),
@@ -231,7 +231,7 @@ class RecalculatingLossWinTest {
 
             var recalculatedEventPayload = testData.recalculatedEvent.getPayload();
             var player = testData.registeredPlayer.getWalletData();
-            var betInfo = recalculatedEventPayload.getBetInfo().getFirst();
+            var betInfo = recalculatedEventPayload.getBetInfo().get(0);
 
             var actualDbBetInfoList = objectMapper
                     .readValue(dbTransaction.getBetInfo(),
