@@ -148,7 +148,7 @@ class CasinoLossLimitWhenBetFromIframeTest {
                     testData.registeredPlayer.getWalletData().getWalletUUID(),
                     (int) testData.betEvent.getSequence());
 
-            var limit = aggregate.getLimits().getFirst();
+            var limit = aggregate.getLimits().get(0);
             assertAll(
                     () -> assertEquals(0, testData.expectedRest.compareTo(limit.getRest()), "redis.aggregate.limit.rest"),
                     () -> assertEquals(0, testData.expectedSpent.compareTo(limit.getSpent()), "redis.aggregate.limit.spent"),
