@@ -184,9 +184,9 @@ class CasinoLossLimitWhenRefundFromGambleTest {
                     (int) testData.refundEvent.getSequence());
 
             assertAll(
-                    () -> assertEquals(0, testData.expectedRestAmountAfterRefund.compareTo(aggregate.getLimits().getFirst().getRest()), "redis.wallet.limit.rest"),
-                    () -> assertEquals(0, testData.expectedSpentAmountAfterRefund.compareTo(aggregate.getLimits().getFirst().getSpent()), "redis.wallet.limit.spent"),
-                    () -> assertEquals(0, testData.limitAmount.compareTo(aggregate.getLimits().getFirst().getAmount()), "redis.wallet.limit.amount")
+                    () -> assertEquals(0, testData.expectedRestAmountAfterRefund.compareTo(aggregate.getLimits().get(0).getRest()), "redis.wallet.limit.rest"),
+                    () -> assertEquals(0, testData.expectedSpentAmountAfterRefund.compareTo(aggregate.getLimits().get(0).getSpent()), "redis.wallet.limit.spent"),
+                    () -> assertEquals(0, testData.limitAmount.compareTo(aggregate.getLimits().get(0).getAmount()), "redis.wallet.limit.amount")
             );
         });
     }
